// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Down Icon Should Render 1`] = `
<svg
  className="enable"
  height={20}
  viewBox="0 0 48 48"
  width={20}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14.83 16.42L24 25.59l9.17-9.17L36 19.25l-12 12-12-12z"
  />
</svg>
`;

exports[`UpIcon Should Render 1`] = `
<svg
  className="enable"
  height={20}
  viewBox="0 0 48 48"
  width={20}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14.83 30.83L24 21.66l9.17 9.17L36 28 24 16 12 28z"
  />
</svg>
`;
